fixing bubulle size issue on mobile

--- a/src/styles/bubule.scss
+++ b/src/styles/bubule.scss
@@ -73,8 +73,8 @@
 
   @media only screen and (max-width: 767px) {
     .bubule_container .js-category{
-      width:60px;
-      height:60px;
+      width:60px !important;
+      height:60px !important;
     }
     .bubule_texte{font-size:12px;}
     .bubule > *{
@@ -83,8 +83,8 @@
   }
   @media only screen and (min-width: 768px) and (max-width: 1023px) {
     .bubule_container .js-category{
-      width:60px;
-      height:60px;
+      width:60px !important;
+      height:60px !important;
     }
     .bubule_texte{font-size:12px;}
     .bubule > *{
@@ -93,8 +93,8 @@
   }
   @media only screen and (min-width: 1024px) and (max-width: 1279px) {
     .bubule_container .js-category{
-      width:72px;
-      height:72px;
+      width:72px !important;
+      height:72px !important;
     }
     .bubule_texte{font-size:12px;}
     .bubule > *{
